# study-sub

./: README.md  TODO.txt  license.txt  pyproject.toml
example_study/: submit_study_dummy.ipynb  test.py
example_study/study_dummy/: tree.yaml
example_study/study_dummy/base/: fact_a_bc.npy  log.txt  run.sh  some_dummy_computations.py
example_study/study_dummy/base/a_1.0_b_1/: log.txt  result.pkl  run.sh  some_more_computations.py
example_study/study_dummy/base/a_1.0_b_2/: log.txt  result.pkl  run.sh  some_more_computations.py
example_study/study_dummy/base/a_2.0_b_1/: log.txt  result.pkl  run.sh  some_more_computations.py
example_study/study_dummy/base/a_2.0_b_2/: log.txt  result.pkl  run.sh  some_more_computations.py
example_study/study_dummy/submission/: submission_file.sub
study_sub/: __init__.py  cluster_submission.py  cluster_submission_old.py  config.py  dependency_graph.py  dict_yaml_utils.py  generate_config.py  generate_run.py  log_finish.py  study_sub.py
study_sub/cluster_submission/: cluster_submission.py  submission_statements.py
study_sub/scripts/: log_finish.py
study_sub/utils/: config_utils.py
